@@ -1,3 +1,6 @@
+2013-04-15 Emilie SAGNIEZ  <emilie.sagniez@plan-net.fr>
+	* Add possibility to change image title tag
+	
 2013-04-05 Emilie SAGNIEZ  <emilie.sagniez@plan-net.fr>
 	* Add infinitescroll to Masonry theme
 	* Refactoring Masonry JS
